<resources>
    <string name="app_name">CannaMaster Grow Assistant</string>
    <string name="tab_text_1">Basics</string>
    <string name="tab_text_2">Tips And Tricks</string>
    <string name="tab_text_3">Advanced Techniques</string>
    <string name="tab_text_4">Sick Plants</string>
    <string name="tab_text_5">Grow Assistant</string>
    <string name="title_activity_settings">Settings</string>
    <string name="cannamaster">CannaMaster</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_night_mode">Color Preferences</string>
    <string name="menu_night_mode_day">Light Mode Always</string>
    <string name="menu_night_mode_night">Dark Mode Always</string>
    <string name="menu_night_mode_auto">Auto</string>
    <string name="menu_font_size_title">Text Size</string>
    <string name="menu_font_size_small">Small (Default)</string>
    <string name="menu_font_size_medium">Medium</string>
    <string name="menu_font_size_large">Large</string>
    <string name="empty_string"> </string>
    <string name="section1_drawer_header">Navigation</string>
    <string name="drawer_item_basics">Basics</string>
    <string name="drawer_item_grow_assistant">Grow Assistant</string>
    <string name="drawer_item_tips_and_tricks">Tips And Tricks</string>
    <string name="drawer_item_advanced">Advanced Techniques</string>
    <string name="drawer_item_sick_plants">Sick Plants/Problems</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>
    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="reminder_name_hint">Title</string>
    <string name="str_cnt_mnu_edit">Edit</string>
    <string name="drawer_item_persistent_compact_header">PersistentHeader Drawer</string>
    <string name="drawer_item_collapsing_toolbar_drawer">CannaMaster</string>
    <string name="drawer_item_collapsing_toolbar_drawer_desc">Uses a CollapsingToolbarLayout</string>
    <string name="drawer_item_crossfade_drawer_layout_drawer">CrossfadeDrawerLayout</string>
    <string name="drawer_item_crossfade_drawer_layout_drawer_desc">2-Step Drawer behavior</string>
    <string name="drawer_item_menu_drawer_item">Menu Drawer Item</string>
    <string name="drawer_item_menu_drawer_item_desc">Sample menu item with overflow button</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play String</string>
    <string name="drawer_item_custom">Custom String</string>
    <string name="drawer_item_section_header">Options</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="title_activity_about_page">AboutPage</string>
    <string name="title_activity_settings_page">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="animals">
        <item>Article Title 1</item>
        <item>Article Title 2</item>
        <item>Article Title 3</item>
    </string-array>
    <string name="repeat">Repeat Reminders?</string>
    <string-array name="pref_dark_mode">
        <item>Auto Day/Night</item>
        <item>Always Light</item>
        <item>Always Dark</item>
    </string-array>
    <string-array name="pref_font_size">
        <item>Small (default)</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>
    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="flowering_date">Choose Flowering Start Date</string>
    <string name="notification_date">Date For Reminder To Alert?</string>
    <string name="time">Time To Receive Reminder(s)</string>
    <string name="repeat_off">Off - Do Not Repeat</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Frequency Of Repeat Reminders?</string>
    <string name="no_reminders">No Reminders Have Been Set Yet.  Start The Grow Assistant
        From The Main Tab To Begin.</string>
    <string name="clear_all_grow_data">Clear All Grow Data</string>
    <string name="edit_grow_information">Edit Grow Information</string>
    <string name="start_grow_assistant">Start Grow Assistant</string>
    <string name="calendar_account_title">Account Title</string>
    <string name="copyright_title">CannaMaster Grow Assistant</string>
    <string name="copyright_summary">Copyright 2020 GB Productions</string>
    <string name="appVersionTitle">Version 2.0.1</string>
    <string name="calendar_account_type">Calendar Account Type</string>
    <string name="calendar_owner_account">Calendar Owner Account</string>
</resources>