<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:icon="@drawable/ic_launcher"
        android:title="@string/pref_header_general" />

    <header
        android:icon="@drawable/ic_launcher"
        android:title="@string/pref_header_notifications" />

    <header
        android:icon="@drawable/ic_launcher"
        android:title="" />

    <header
        android:icon="@drawable/star_off_pressed"
        android:title="@string/pref_header_data_sync" />

    <header
        android:icon="@drawable/ic_launcher"
        android:title="Clear All User Data" />

    <header
        android:icon="@drawable/ic_launcher"
        android:title="Application Preferences" />

</preference-headers>
