<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Local Calendar Settings">

        <EditTextPreference
            android:key="calendar_number_key"
            android:title="@string/local_calender_number"
            android:dialogTitle="@string/local_calender_number"
            android:defaultValue="16"
            android:inputType="number"/>

        <EditTextPreference
            android:key="account_name_key"
            android:title="@string/calendar_account_title"
            android:defaultValue="CannaMaster Grow Assistant"
            android:summary="%s"
            android:dialogTitle="@string/calendar_account_title"
            android:inputType="textNoSuggestions|textUri"/>

        <EditTextPreference
            android:key="account_type_key"
            android:title="@string/calendar_account_type"
            android:defaultValue="LOCAL"
            android:summary="%s"
            android:dialogTitle="@string/calendar_account_type"
            android:inputType="textNoSuggestions|textUri"/>

    <EditTextPreference
            android:key="owner_account_key"
            android:title="@string/calendar_owner_account"
            android:summary="%s"
            android:dialogTitle="@string/calendar_owner_account"
            android:defaultValue="accountOwner"
            android:inputType="textNoSuggestions|textUri"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Display Settings">

        <ListPreference
            android:dialogTitle="Article Text Size"
            android:entries="@array/article_text_size_titles"
            android:entryValues="@array/article_text_size_values"
            android:key="article_text_size_key"
            android:summary="%s"
            android:title="InApp Article Text Size" />


        <ListPreference
            android:dialogTitle="Dark/Light Theme Options"
            android:entries="@array/day_night_preference_titles"
            android:entryValues="@array/day_night_preference_values"
            android:key="day_night_key"
            android:summary="%s"
            android:title="Dark/Light Theme Options" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Application Information">
        <Preference
            android:key="version_Info"
            android:selectable="true"
            android:persistent="false"
            android:title="Application Version"
            android:summary="@string/appVersionTitle"/>
        <Preference
            android:key="copyright"
            android:selectable="true"
            android:persistent="false"
            android:title="@string/copyright_title"
            android:summary="@string/copyright_summary"/>
    </PreferenceCategory>

</PreferenceScreen>