<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">


    <Button
        android:id="@+id/button_start_growassistant"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@color/green_700"
        android:text="@string/start_grow_assistant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_edit_grow_information"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="132dp"
        android:background="@color/green_700"
        android:text="@string/edit_grow_information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_clear_data"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="232dp"
        android:background="@color/green_700"
        android:text="@string/clear_all_grow_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>